Updated new post repair mouse

--- a/MyTechNotes/PS-FindSubkeyreg_Post2.html
+++ b/MyTechNotes/PS-FindSubkeyreg_Post2.html
@@ -24,9 +24,9 @@
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Application Packaging</a></li>
+                    <li class="nav-item"><a class="nav-link" href="AppPack_Index1.html">Application Packaging</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">MECM</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Scripting</a></li>
+                    <li class="nav-item"><a class="nav-link" href="MISC_Index1.html">MISC</a></li>
                 </ul>
             </div>
         </div>
@@ -113,7 +113,7 @@ SubKey = $SKey
     </div>
     <footer class="text-center bg-dark mt-3">
         <div class="container text-white py-4 py-lg-5">
-            <p class="text-muted mb-0">Copyright © 2022 My Tech Notes</p>
+            <p class="text-muted mb-0">Copyright © 2023 My Tech Notes</p>
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
