--- a/MyTechNotes/PS-PS ISE Addon_Post1.html
+++ b/MyTechNotes/PS-PS ISE Addon_Post1.html
@@ -24,9 +24,9 @@
             <div class="collapse navbar-collapse" id="navcol-2">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Application Packaging</a></li>
+                    <li class="nav-item"><a class="nav-link" href="AppPack_Index1.html">Application Packaging</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">MECM</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Scripting</a></li>
+                    <li class="nav-item"><a class="nav-link" href="MISC_Index1.html">MISC</a></li>
                 </ul>
             </div>
         </div>
