--- a/MyTechNotes/AppPack_Index1.html
+++ b/MyTechNotes/AppPack_Index1.html
@@ -34,28 +34,6 @@
     <div data-bss-parallax-bg="true" style="height: 250px;background: url(&quot;assets/img/green.png&quot;) center / auto no-repeat;"></div>
     <div class="container mt-4">
         <div class="row">
-            <div class="col-3 offset-xl-0 col-md-auto"><img class="img-fluid" src="assets/img/powershell_155.jpg" style="width: 155px;"></div>
-            <div class="col-9">
-                <div>
-                    <h1 class="h3" style="font-family: Abel;font-weight: bold;">Powershell ISE Add-on to Sign a script<br><span class="mb-1" style="color: rgb(94,203,112);font-size: 17px;">Published Mar 18, 2023</span><span style="color: rgb(94,203,112);font-size: 17px;">&nbsp; &nbsp; &nbsp;8 min read</span><br></h1>
-                    <p class="mb-1"><span style="color: rgb(79, 79, 79);">Set script-signature.ps1 will create an ISE Add-on that will sign the current file opened in the editor.</span><br>The add-on helps to prevent using command line to sign the script every time...</p><a class="text-decoration-none" href="PS-PS%20ISE%20Addon_Post1.html" style="color: rgb(94,203,112);font-family: Abel, sans-serif;">Read more →&nbsp;<br><br></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-3 offset-xl-0 col-md-auto"><img class="img-fluid" src="assets/img/powershell_Find.jpg" style="width: 155px;"></div>
-            <div class="col-9">
-                <div>
-                    <h1 class="h3" style="font-family: Abel;font-weight: bold;">Powershell find subkey registry<br><span class="mb-1" style="color: rgb(94,203,112);font-size: 17px;">Published Mar 20, 2023</span><span style="color: rgb(94,203,112);font-size: 17px;">&nbsp; &nbsp; &nbsp;5 min read</span><br></h1>
-                    <p class="mb-1"><span style="color: rgb(79, 79, 79);">The script will find the subkey registry for the associated subkey value.&nbsp;</span>The script is mainly designed to query the remote machine registry...</p><a class="text-decoration-none" href="PS-FindSubkeyreg_Post2.html" style="color: rgb(94,203,112);font-family: Abel, sans-serif;">Read more →&nbsp;<br><br></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container mt-4">
-        <div class="row">
             <div class="col-3 offset-xl-0 col-md-auto"><img class="img-fluid" src="assets/img/MSI_RemoveFile.jpg" style="width: 155px;"></div>
             <div class="col-9">
                 <div>
@@ -65,20 +43,9 @@
             </div>
         </div>
     </div>
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-3 offset-xl-0 col-md-auto"><img class="img-fluid" src="assets/img/RepairMouse.jpg" style="width: 155px;"></div>
-            <div class="col-9">
-                <div>
-                    <h1 class="h3" style="font-family: Abel;font-weight: bold;">Reviving Your Unresponsive Optical Mouse: The WD-40 Solution&nbsp;&nbsp;<br><span class="mb-1" style="color: rgb(94,203,112);font-size: 17px;">Published Jun 01, 2023</span><span style="color: rgb(94,203,112);font-size: 17px;">&nbsp; &nbsp; &nbsp;5 min read</span><br></h1>
-                    <p class="mb-1">We've all experienced the frustration of an unresponsive mouse, where clicks and scrolling seem to have no effect.....</p><a class="text-decoration-none" href="RepairMouse_Post3.html" style="color: rgb(94,203,112);font-family: Abel, sans-serif;">Read more →&nbsp;<br></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <footer class="text-center bg-dark mt-3">
+    <footer class="text-center bg-dark mt-3 position-absolute bottom-0 w-100">
         <div class="container text-white py-4 py-lg-5">
-            <p class="text-muted mb-0">Copyright © 2023 My Tech Notes</p>
+            <p class="text-muted mb-0">Copyright&nbsp;© 2023 My Tech Notes</p>
         </div>
     </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
