Removed .html extension

--- a/MyTechNotes/index.html
+++ b/MyTechNotes/index.html
@@ -38,7 +38,7 @@
             <div class="col-9">
                 <div>
                     <h1 class="h3" style="font-family: Abel;font-weight: bold;">Powershell ISE Add-on to Sign a script<br><span class="mb-1" style="color: rgb(94,203,112);font-size: 17px;">Published Mar 18, 2023</span><span style="color: rgb(94,203,112);font-size: 17px;">&nbsp; &nbsp; &nbsp;8 min read</span><br></h1>
-                    <p class="mb-1"><span style="color: rgb(79, 79, 79);">Set script-signature.ps1 will create an ISE Add-on that will sign the current file opened in the editor.</span><br>The add-on helps to prevent using command line to sign the script every time...</p><a class="text-decoration-none" href="PS-PS%20ISE%20Addon_Post1.html" style="color: rgb(94,203,112);font-family: Abel, sans-serif;">Read more →&nbsp;<br><br></a>
+                    <p class="mb-1"><span style="color: rgb(79, 79, 79);">Set script-signature.ps1 will create an ISE Add-on that will sign the current file opened in the editor.</span><br>The add-on helps to prevent using command line to sign the script every time...</p><a class="text-decoration-none" href="PS-PS%20ISE%20Addon_Post1" style="color: rgb(94,203,112);font-family: Abel, sans-serif;">Read more →&nbsp;<br><br></a>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
             <div class="col-9">
                 <div>
                     <h1 class="h3" style="font-family: Abel;font-weight: bold;">Powershell find subkey registry<br><span class="mb-1" style="color: rgb(94,203,112);font-size: 17px;">Published Mar 20, 2023</span><span style="color: rgb(94,203,112);font-size: 17px;">&nbsp; &nbsp; &nbsp;5 min read</span><br></h1>
-                    <p class="mb-1"><span style="color: rgb(79, 79, 79);">The script will find the subkey registry for the associated subkey value.&nbsp;</span>The script is mainly designed to query the remote machine registry...</p><a class="text-decoration-none" href="PS-FindSubkeyreg_Post2.html" style="color: rgb(94,203,112);font-family: Abel, sans-serif;">Read more →&nbsp;<br><br></a>
+                    <p class="mb-1"><span style="color: rgb(79, 79, 79);">The script will find the subkey registry for the associated subkey value.&nbsp;</span>The script is mainly designed to query the remote machine registry...</p><a class="text-decoration-none" href="PS-FindSubkeyreg_Post2" style="color: rgb(94,203,112);font-family: Abel, sans-serif;">Read more →&nbsp;<br><br></a>
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
             <div class="col-9">
                 <div>
                     <h1 class="h3" style="font-family: Abel;font-weight: bold;">MSI RemoveFile Table in InstallShield<br><span class="mb-1" style="color: rgb(94,203,112);font-size: 17px;">Published Mar 25, 2023</span><span style="color: rgb(94,203,112);font-size: 17px;">&nbsp; &nbsp; &nbsp;5 min read</span><br></h1>
-                    <p class="mb-1">RemoveFile table is one of the methods to remove files/folders during install/uninstall or either.&nbsp;RemoveFile table contains list of files/folder to be removed by the RemoveFiles action....</p><a class="text-decoration-none" href="AppPack-RemoveFile_Post1.html" style="color: rgb(94,203,112);font-family: Abel, sans-serif;">Read more →&nbsp;<br><br></a>
+                    <p class="mb-1">RemoveFile table is one of the methods to remove files/folders during install/uninstall or either.&nbsp;RemoveFile table contains list of files/folder to be removed by the RemoveFiles action....</p><a class="text-decoration-none" href="AppPack-RemoveFile_Post1" style="color: rgb(94,203,112);font-family: Abel, sans-serif;">Read more →&nbsp;<br><br></a>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
             <div class="col-9">
                 <div>
                     <h1 class="h3" style="font-family: Abel;font-weight: bold;">Reviving Your Unresponsive Optical Mouse: The WD-40 Solution&nbsp;&nbsp;<br><span class="mb-1" style="color: rgb(94,203,112);font-size: 17px;">Published Jun 01, 2023</span><span style="color: rgb(94,203,112);font-size: 17px;">&nbsp; &nbsp; &nbsp;5 min read</span><br></h1>
-                    <p class="mb-1">We've all experienced the frustration of an unresponsive mouse, where clicks and scrolling seem to have no effect.....</p><a class="text-decoration-none" href="RepairMouse_Post3.html" style="color: rgb(94,203,112);font-family: Abel, sans-serif;">Read more →&nbsp;<br></a>
+                    <p class="mb-1">We've all experienced the frustration of an unresponsive mouse, where clicks and scrolling seem to have no effect.....</p><a class="text-decoration-none" href="RepairMouse_Post3" style="color: rgb(94,203,112);font-family: Abel, sans-serif;">Read more →&nbsp;<br></a>
                 </div>
             </div>
         </div>
